--- a/aptos/cmd/infra/package.json
+++ b/aptos/cmd/infra/package.json
@@ -6,11 +6,13 @@
     "author": "Wertikalk (m@wertikalk.com)",
     "scripts": {
         "build": "tsc",
-        "run:swap": "pnpm build && node dist-infra/init/deploy.js"
+        "run:swap": "pnpm build && node dist-infra/init/deploy.js",
+        "run:swap:aptos-to-ethereum:native-to-token": "pnpm build && node dist-infra/swap/aptos-to-ethereum/native-to-token.js"
     },
     "dependencies": {
         "@1inch/byte-utils": "2.6.0",
         "@1inch/fusion-sdk": "2.1.11-rc.2",
+        "@aptos-labs/ts-sdk": "^3.1.3",
         "@openzeppelin/merkle-tree": "^1.0.8",
         "dotenv": "16.4.5",
         "ecies-25519": "^1.3.1",
